Fix broken header alignment on mobile. This introduces an issue where the title will wrap to two lines if the screen width is smaller than 300 px.

--- a/_sass/minima/_includes.scss
+++ b/_sass/minima/_includes.scss
@@ -38,9 +38,6 @@ $site-header-height: 10vh;
       }
       @include media-query($on-palm) {
         $nav-size: 36px;
-        position: absolute;
-        top: calc((#{$site-header-height} - #{$nav-size}) / 2);
-        right: calc((#{$site-header-height} - #{$nav-size}) / 2);
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
